<resources>
    <string name="app_name">TestEnglish</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="test_setting">Test Setting</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="number_question">Number Question</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
    <string name="time_to_one_question">Time to one Question</string>
    <string name="_20_sec">20 Sec</string>
    <string name="_30_sec">30 Sec</string>
    <string name="_1_min">1 Min</string>
    <string name="test_with_answer">Test with answer</string>
    <string name="test_with_choice">Test with choice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Exit</string>
    <string name="textWord">Text</string>
    <string name="choose_one_answer">Choose one answer</string>
    <string name="buttonContinueTestWithAnswer">Continue</string>
    <string name="answer_one">TEST</string>
    <string name="answer_two">TEST</string>
    <string name="answer_tree">TEST</string>
    <string name="translate_word">Translate word</string>
    <string name="_00">00</string>
</resources>