<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test_with_choice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_test_with_choice">

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopButton"
        android:text="@string/_00"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textWord"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartButton"
        android:layout_marginTop="@dimen/marginTopButton"
        android:layout_marginEnd="@dimen/marginEndButton"
        android:text="@string/exit"
        app:layout_constraintEnd_toStartOf="@+id/buttonContinueTestWithChoice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopButton"
        android:text="@string/textWord"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/choose_one_answer"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonContinueTestWithChoice"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartButton"
        android:layout_marginTop="@dimen/marginTopButton"
        android:layout_marginEnd="@dimen/marginEndButton"
        android:text="@string/buttonContinueTestWithAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonExit"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWord">

        <RadioGroup
            android:id="@+id/radioGroupQuest"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/buttonChoiceOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_one"
                android:textSize="@dimen/textSize"
                android:visibility="visible"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/buttonChoiceTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_two"
                android:textSize="@dimen/textSize" />

            <RadioButton
                android:id="@+id/buttonChoiceTree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_tree"
                android:textSize="@dimen/textSize" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>