<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/setting_test"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:padding="@dimen/padding"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:padding="@dimen/padding"
        android:text="@string/number_question"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupChooseLanguage" />


    <TextView
        android:id="@+id/textTimeToOneQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:padding="@dimen/padding"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupChooseNumberQuestion" />


    <Button
        android:id="@+id/buttonTestWithAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartFirstButton"
        android:layout_marginTop="@dimen/marginTopButton"
        android:layout_marginEnd="@dimen/marginEndFirstButton"
        android:text="@string/test_with_answer"
        android:textSize="@dimen/textSizeButton"
        app:layout_constraintEnd_toStartOf="@+id/buttonTestWithChoice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTimeToOneQuestion" />


    <Button
        android:id="@+id/buttonTestWithChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartTwoButton"
        android:layout_marginTop="@dimen/marginTopButton"
        android:layout_marginEnd="@dimen/marginEndTwoButton"
        android:text="@string/test_with_choice"
        android:textSize="@dimen/textSizeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonTestWithAnswer"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTimeToOneQuestion" />

    <RadioGroup
        android:id="@+id/radioGroupChooseLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLanguage">

        <RadioButton
            android:id="@+id/buttonChooseLanguageEnglish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:padding="@dimen/paddingRadioButton"
            android:text="@string/english"
            android:textSize="@dimen/textSizeRadioButton" />

        <RadioButton
            android:id="@+id/buttonChooseLanguageGerman"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingRadioButton"
            android:text="@string/german"
            android:textSize="@dimen/textSizeRadioButton" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupChooseNumberQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textQuestion">

        <RadioButton
            android:id="@+id/buttonChooseNumberQuestionFive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingRadioButton"
            android:text="@string/_5"
            android:textSize="@dimen/textSizeRadioButton" />

        <RadioButton
            android:id="@+id/buttonChooseNumberQuestionTen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingRadioButton"
            android:text="@string/_10"
            android:textSize="@dimen/textSizeRadioButton" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupTimeToOneQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTimeToOneQuestion">

        <RadioButton
            android:id="@+id/buttonTimeToOneQuestion20S"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingRadioButton"
            android:text="@string/_20_sec"
            android:textSize="@dimen/textSizeRadioButton" />

        <RadioButton
            android:id="@+id/buttonTimeToOneQuestion30S"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingRadioButton"
            android:text="@string/_30_sec"
            android:textSize="@dimen/textSizeRadioButton" />

        <RadioButton
            android:id="@+id/buttonTimeToOneQuestion1M"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/paddingRadioButton"
            android:text="@string/_1_min"
            android:textSize="@dimen/textSizeRadioButton" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>