<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test_with_answer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/linerLayoutMarginTop"
        android:text="@string/translate_word"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/linerLayoutMarginTop"
        android:text="@string/textWord"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/linerLayoutMarginTop"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="@dimen/minHeight"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWord"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartButton"
        android:layout_marginTop="@dimen/marginTopButton"
        android:layout_marginEnd="@dimen/marginEndButton"
        android:text="@string/exit"
        app:layout_constraintEnd_toStartOf="@+id/buttonContinueTestWithAnswer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAnswer" />

    <Button
        android:id="@+id/buttonContinueTestWithAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartButton"
        android:layout_marginTop="@dimen/marginTopButton"
        android:layout_marginEnd="@dimen/marginEndButton"
        android:text="@string/buttonContinueTestWithAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonExit"
        app:layout_constraintTop_toBottomOf="@+id/editTextAnswer" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="00"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>